# g15-control-center

./: .gitignore  README.md  g15_controller_commander.py  g15_daemon.py  install.sh  install_gmode_key.sh  pyproject.toml  requirements.txt  uninstall.sh
src/: __init__.py  g15_control_center.py  g15_controller_commander.py  g15_daemon.py
system/: 90-dell-g15-gmode.hwdb  g15-control-center.desktop  g15-controller-commander.desktop  g15-daemon.service
